# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  file_parser.py  gendif_engine.py  gendiff.py  genstring.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/results/: result_json.txt
